tailwind scrollbar fixed

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,16 +18,16 @@
   src: url('assets/fonts/AROneSansRetina-Bold.ttf');
 }
 
-// .v-scrollbar {
-//   @apply overflow-y-auto overflow-x-hidden scrollbar-thin scrollbar-thumb-tertiary scrollbar-track-bgA;
-// }
-// .h-scrollbar {
-//   @apply overflow-x-auto overflow-y-hidden scrollbar-thin scrollbar-thumb-tertiary scrollbar-track-bgA;
-// }
-// .scrollbar {
-//   @apply overflow-auto scrollbar-thin scrollbar-thumb-tertiary scrollbar-track-bgA;
-// }
+.v-scrollbar {
+  @apply overflow-y-auto overflow-x-hidden scrollbar-thin scrollbar-thumb-tertiary scrollbar-track-bgA;
+}
+.h-scrollbar {
+  @apply overflow-x-auto overflow-y-hidden scrollbar-thin scrollbar-thumb-tertiary scrollbar-track-bgA;
+}
+.scrollbar {
+  @apply overflow-auto scrollbar-thin scrollbar-thumb-tertiary scrollbar-track-bgA;
+}
 
-// .scrollbar-stable {
-//   scrollbar-gutter: stable;
-// }
+.scrollbar-stable {
+  scrollbar-gutter: stable;
+}
